--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -13,7 +13,12 @@
 			<Button Name="Nuliraj" Content="0" FontSize="72" Click="Nuliraj_Click" Margin="20"/>
 			<Button Name="Dodaj" Content="++" FontSize="72" Click="Dodaj_Click" Margin="20"/>
 		</StackPanel>
-		<Label Name="lbNesto" Content="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="74"/>
+		<StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom">
+			<Label Content="{Binding Naziv, Mode=OneWay}" FontSize="42"/>
+			<TextBox Text="{Binding Stanje, UpdateSourceTrigger=PropertyChanged}" FontSize="42"/>
+		</StackPanel>
+
+		<Label Content="{Binding Stanje}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="74"/>
 	</DockPanel>
 	
 </Window>
