--- a/Calc/MainWindow.xaml
+++ b/Calc/MainWindow.xaml
@@ -8,23 +8,23 @@
         Title="Kalkulator" Height="500" Width="400" ResizeMode="NoResize">
 	<DockPanel>
 		<Label Content="{Binding X}" HorizontalAlignment="Right" DockPanel.Dock="Top" FontSize="72" FontWeight="Bold"/>
-		<Button DockPanel.Dock="Bottom" Content="=" FontSize="42"/>
+		<Button Click="Jednako_Click" DockPanel.Dock="Bottom" Content="=" FontSize="42"/>
 		<UniformGrid Columns="4">
-			<Button Content="7" FontSize="42"/>
-			<Button Content="8" FontSize="42"/>
-			<Button Name="br9" Click="br9_Click" Content="9" FontSize="42"/>
-			<Button Content="+" FontSize="42"/>
-			<Button Content="4" FontSize="42"/>
-			<Button Content="5" FontSize="42"/>
-			<Button Content="6" FontSize="42"/>
+			<Button Click="Broj_Click" Content="7" FontSize="42"/>
+			<Button Click="Broj_Click" Content="8" FontSize="42"/>
+			<Button Click="Broj_Click" Content="9" FontSize="42"/>
+			<Button Click="Sabiranje_Click" Content="+" FontSize="42"/>
+			<Button Click="Broj_Click" Content="4" FontSize="42"/>
+			<Button Click="Broj_Click" Content="5" FontSize="42"/>
+			<Button Click="Broj_Click" Content="6" FontSize="42"/>
 			<Button Content="-" FontSize="42"/>
-			<Button Content="1" FontSize="42"/>
-			<Button Content="2" FontSize="42"/>
-			<Button Content="3" FontSize="42"/>
+			<Button Click="Broj_Click" Content="1" FontSize="42"/>
+			<Button Click="Broj_Click" Content="2" FontSize="42"/>
+			<Button Click="Broj_Click" Content="3" FontSize="42"/>
 			<Button Content="*" FontSize="42"/>
-			<Button Content="0" FontSize="42"/>
-			<Button Content="C" FontSize="42"/>
-			<Button Content="CE" FontSize="42"/>
+			<Button Click="Broj_Click" Content="0" FontSize="42"/>
+			<Button Click="Clear_Click" Content="C" FontSize="42"/>
+			<Button Click="ClearErr_Click" Content="CE" FontSize="42"/>
 			<Button Content="/" FontSize="42"/>
 		</UniformGrid>
 	</DockPanel>
