--- a/WPF Entity Framework/MainWindow.xaml
+++ b/WPF Entity Framework/MainWindow.xaml
@@ -6,5 +6,16 @@
         xmlns:local="clr-namespace:WPF_Entity_Framework"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-	<DataGrid Name="dg" FontSize="42"/>
+	<DockPanel>
+		<StackPanel DockPanel.Dock="Top">
+			<TextBox Text="{Binding Unos,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay,NotifyOnTargetUpdated=True}" FontSize="42"/>
+			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+				<Button Content="Unos" Name="unos" Click="unos_Click" FontSize="42"/>
+				<Button Content="Izmena" Name="izmena" Click="izmena_Click"	  FontSize="42"/>
+				<Button Content="Brisanje" Name="brisanje" Click="brisanje_Click"	  FontSize="42"/>
+			</StackPanel>
+			<TextBox Text="{Binding Pretraga,UpdateSourceTrigger=PropertyChanged}" FontSize="42"/>
+		</StackPanel>
+		<DataGrid Name="dg" IsReadOnly="True" FontSize="42" SelectionChanged="dg_SelectionChanged"/>
+	</DockPanel>
 </Window>
